@@ -78,8 +78,9 @@
 		<script type="text/javascript" charset="utf-8" src="js/TableTools.min.js"></script>
 		<script type="text/javascript" charset="utf-8" src="js/date.format.js"></script>
 		<script type="text/javascript" charset="utf-8" src="js/highcharts.js"></script>
-		<script type="text/javascript" charset="utf-8" src="js/highcharts-more.js"></script>
-		<script type="text/javascript" charset="utf-8" src="js/modules/exporting.js"></script>
+		//<script type="text/javascript" charset="utf-8" src="js/highcharts-more.js"></script>
+		<script src="js/modules/exporting.js"></script>
+		<script src="js/export-csv.js"></script>
 		<script type="text/javascript" charset="utf-8" src="js/themes/dark-blue.js"></script>
 		<script type="text/javascript" charset="utf-8" src="js/domoticz.js"></script>
 
